# xmrig-android

./: build-xmrig.sh
.github/workflows/: build-android.yml  main.yml
app/: CMakeLists.txt
